Extracted CitationKeyWriterPreferences from SavePreferences